--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "homepage": "https://github.com/sat-utils/sat-api-express#readme",
   "dependencies": {
-    "body-parser": "^1.15.1",
-    "compression": "^1.6.1",
+    "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
+    "cors": "^2.8.1",
     "envloader": "0.0.3",
     "express": "^4.13.4",
     "sat-api-lib": "^0.1.0"
