--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sat-api-express",
   "version": "1.0.0",
   "description": "An express implementation of sat-api",
-  "main": "index.js",
+  "main": "app/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "LOG_LEVEL=debug node index.js"
@@ -24,5 +24,12 @@
     "envloader": "0.0.3",
     "express": "^4.13.4",
     "sat-api-lib": "^0.5.0"
+  },
+  "devDependencies": {
+    "apidoc": "^0.17.5"
+  },
+  "apidoc": {
+    "title": "Sat API",
+    "url" : "api.developmentseed.org/satellites"
   }
 }
