--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
               echo "docs.sat-utils.org" > CNAME
               git add .
               git commit -m "CI deploy [skip ci]"
-              git remote add origin git@github.com:developmentseed/ds-pipe.git
+              git remote add origin git@github.com:sat-utils/sat-api-express.git
               git push origin --force --quiet HEAD:gh-pages
               rm -rf .git
             else
